--- a/css/main.css
+++ b/css/main.css
@@ -152,6 +152,51 @@ p {
   }
 }
 
+.blackout {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.nav__item {
+  font-size: 3.2rem;
+}
+@media screen and (min-width: 768px) {
+  .nav__item {
+    display: inline-block;
+    width: 23%;
+  }
+}
+.nav__link {
+  color: #eff0f3;
+  padding: 10px;
+  border-radius: 0.4rem;
+  display: block;
+  transition-duration: 0.5s;
+  text-align: center;
+}
+.nav__link:hover {
+  background-color: #74030e;
+}
+
+.heading--h1 {
+  color: #eff0f3;
+  font-size: 6rem;
+}
+@media screen and (min-width: 768px) {
+  .heading--h1 {
+    font-size: 8rem;
+  }
+}
+@media screen and (min-width: 1240px) {
+  .heading--h1 {
+    font-size: 10rem;
+  }
+}
+.heading--h2 {
+  font-size: 5rem;
+  width: 100%;
+  text-align: center;
+}
+
 .btn {
   display: inline-block;
   width: 200px;
@@ -191,30 +236,6 @@ p {
   padding: 0;
 }
 
-.heading--h1 {
-  color: #eff0f3;
-  font-size: 6rem;
-}
-@media screen and (min-width: 768px) {
-  .heading--h1 {
-    font-size: 8rem;
-  }
-}
-@media screen and (min-width: 1240px) {
-  .heading--h1 {
-    font-size: 10rem;
-  }
-}
-.heading--h2 {
-  font-size: 5rem;
-  width: 100%;
-  text-align: center;
-}
-
-.blackout {
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
 .site-header {
   background: url("../../assets/img/start.jpeg") center/cover fixed;
   height: 100vh;
@@ -224,6 +245,12 @@ p {
   position: absolute;
   width: 100%;
   height: 100%;
+}
+.site-header__nav {
+  position: absolute;
+  width: 60%;
+  text-align: center;
+  margin-top: 30px;
 }
 .site-header__h1 {
   position: absolute;
