--- a/scss/06-components/_btn.scss
+++ b/scss/06-components/_btn.scss
@@ -13,6 +13,7 @@
     font-size: 2.2rem;
     font-weight: bold;
     text-align: center;
+    transition-duration: .5s;
 
     &--red{
         background-color: $color-red;
