added socials side bar

--- a/scss/06-components/_image-box.scss
+++ b/scss/06-components/_image-box.scss
@@ -11,14 +11,14 @@
     }
 
     &__image {
-        background: url('../../assets/img/one.jpg') center/cover;
+        background: url('../assets/img/one.jpg') center/cover;
         height: 22rem;
         display: block;
         border-top-left-radius: .6rem;
         border-top-right-radius: .6rem;
 
         &--next{
-            background: url('../../assets/img/two.jpeg') center/cover;
+            background: url('../assets/img/two.jpeg') center/cover;
         }
 
         @include medium {
