--- a/css/main.css
+++ b/css/main.css
@@ -153,6 +153,54 @@ p {
   }
 }
 
+.social {
+  width: 200px;
+  height: 83px;
+  background-color: #eff0f3;
+  border: 1px solid grey;
+  z-index: 1;
+  border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  transition: 1s ease-in-out;
+  cursor: pointer;
+}
+.social:hover {
+  transform: translateX(135px);
+}
+.social__item {
+  background: url("../assets/img/sprites_socials.png");
+  width: 43px;
+  height: 42px;
+  overflow: hidden;
+  display: inline-block;
+  margin: 20px 0;
+  transition: 0.25s ease-in-out;
+}
+.social__item--facebook {
+  background-position: 0px -1px;
+}
+.social__item--facebook:hover {
+  background-position: 0px -43px;
+}
+.social__item--twitter {
+  background-position: -52px -1px;
+}
+.social__item--twitter:hover {
+  background-position: -52px -43px;
+}
+.social__item--youtube {
+  background-position: -104px -1px;
+}
+.social__item--youtube:hover {
+  background-position: -104px -43px;
+}
+.social__item--linkedin {
+  background-position: -156px -1px;
+}
+.social__item--linkedin:hover {
+  background-position: -156px -43px;
+}
+
 .blackout {
   background-color: rgba(0, 0, 0, 0.4);
 }
@@ -247,14 +295,14 @@ p {
   box-shadow: 0 0 25px gray;
 }
 .image-box__image {
-  background: url("../../assets/img/one.jpg") center/cover;
+  background: url("../assets/img/one.jpg") center/cover;
   height: 22rem;
   display: block;
   border-top-left-radius: 0.6rem;
   border-top-right-radius: 0.6rem;
 }
 .image-box__image--next {
-  background: url("../../assets/img/two.jpeg") center/cover;
+  background: url("../assets/img/two.jpeg") center/cover;
 }
 @media screen and (min-width: 768px) {
   .image-box__image {
@@ -268,8 +316,51 @@ p {
   font-family: "Roboto", sans-serif;
 }
 
+.form {
+  width: 95%;
+  font-family: "Roboto", sans-serif;
+}
+@media screen and (min-width: 768px) {
+  .form {
+    width: 60%;
+  }
+}
+@media screen and (min-width: 1240px) {
+  .form {
+    width: 40%;
+  }
+}
+.form__label {
+  font-size: 1.8rem;
+  margin-bottom: 0.6rem;
+  display: block;
+}
+.form__item {
+  display: block;
+  width: 100%;
+  padding: 1.4rem;
+  background-color: rgba(0, 0, 0, 0.4);
+  border: 1px solid #eff0f3;
+  border-radius: 0.4rem;
+  margin-bottom: 1.5rem;
+  outline: 0;
+  resize: none;
+  color: #eff0f3;
+  font-size: 1.6rem;
+  font-family: inherit;
+}
+.form:focus {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.site-body__social {
+  position: fixed;
+  left: -135px;
+  bottom: 20%;
+}
+
 .site-header {
-  background: url("../../assets/img/start.jpeg") center/cover fixed;
+  background: url("../assets/img/start.jpeg") center/cover fixed;
   height: 100vh;
   position: relative;
 }
@@ -304,6 +395,29 @@ p {
 }
 .site-section--bg-color {
   background-color: #504533;
+}
+
+.site-contact {
+  background: url("../assets/img/contact.jpeg") center/cover fixed;
+  min-height: 55rem;
+  color: #eff0f3;
+  position: relative;
+}
+.site-contact__blackout {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+}
+.site-contact__h2 {
+  position: absolute;
+}
+.site-contact__form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .site-footer {
