--- a/scss/06-components/_index.scss
+++ b/scss/06-components/_index.scss
@@ -1,5 +1,7 @@
+@forward 'social';
 @forward 'blackout';
 @forward 'nav';
 @forward 'heading';
 @forward 'btn';
 @forward 'image-box';
+@forward 'form';
