--- a/scss/07-templates/_site-header.scss
+++ b/scss/07-templates/_site-header.scss
@@ -3,7 +3,7 @@
 
 //BLOK
 .site-header {
-    background: url('../../assets/img/start.jpeg') center/cover fixed;
+    background: url('../assets/img/start.jpeg') center/cover fixed;
     height: 100vh;
     position: relative;
 
